# FaaRayPy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  testfaaray.py
faaray/: CMakeLists.txt  __init__.py  faaray_bindings.cpp
